--- a/DEV/CodeBuilder/CodeBuilder/Template/POCOEntityTemplate.tt
+++ b/DEV/CodeBuilder/CodeBuilder/Template/POCOEntityTemplate.tt
@@ -7,7 +7,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using System.Runtime.Serialization;
-using <#= string.Format("{0}.{1}.Attribute", entity.TopNameSpace, entity.SecondNameSpace) #>
+using <#= string.Format("{0}.Attribute", entity.TopNameSpace) #>
 
 /// <summary>
 /// <#= entity.IsSetClassDescription?entity.ClassDescription:"" #>
