--- a/DEV/CodeBuilder/CodeBuilder/Template/DOEntityTemplate.tt
+++ b/DEV/CodeBuilder/CodeBuilder/Template/DOEntityTemplate.tt
@@ -4,11 +4,9 @@
 <#@ parameter type="CodeBuilder.Model.Template.EntityClassInfo" name="entity" #>
 using System;
 using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
+using System.Data.Entity.Spatial;
 
 /// <summary>
 /// <#= entity.IsSetClassDescription?entity.ClassDescription:"" #>
